...
  Widget build(BuildContext context) {
    TabController tabController = TabController(length: 3, vsync: this);

    return Scaffold(
      appBar: AppBar(
        backgroundColor: Colors.red[300],
        title: const Text('User Profile'),
        centerTitle: true,
        elevation: 0,
      ),
      body: Center(
        child: Column(
          children: [
...
                                        String imageUrl = await _profileImageService.uploadImageToStorage(ImageSource.camera);
                                        await _profileImageService.linkImageToFirestoreUser(imageUrl);
                                        await fetchUserImageUrl();
                                      },
                                      leading: const Icon(Icons.camera_alt),
                                      title: const Text(
                                        'Camera',
                                        style: TextStyle(
                                          fontFamily: 'Poppins',
                                        ),
                                      ),
                                    ),
                                    ListTile(
...
                                        String imageUrl = await _profileImageService.uploadImageToStorage(ImageSource.gallery);
                                        await _profileImageService.linkImageToFirestoreUser(imageUrl);
                                        await fetchUserImageUrl();
                                      },
                                      leading: const Icon(Icons.image),
                                      title: const Text(
                                        'Gallery',
                                        style: TextStyle(
                                          fontFamily: 'Poppins',
                                        ),
                                      ),
                                    )
                                  ],
...
                    borderRadius: const BorderRadius.only(
                      topLeft: Radius.circular(10.0),
                      topRight: Radius.circular(10.0),
                    ),
                  ),
                  tabs: const [
                    Tab(text: 'Your Allergens'),
                    Tab(text: 'Allergenic Foods'),
                    Tab(text: 'Your Symptoms'),
                  ],
                ),
              ),
            ),
            Flexible(
              child: Container(
...
                      stream: _fireStoreService.getUserDocSnapshot(),
                      builder: (context, snapshot) {
                        if (snapshot.hasData) {
                          final userDoc = snapshot.data!;
                          final allergenList = userDoc.data()?['allergens'] as List<dynamic>;
                          return ListView.builder(
                            key: const Key('yourAllergensListView'),
                            itemCount: allergenList.length,
                            itemBuilder: (context, index) {
                              final allergenName = allergenList[index].toString();
                              return ListTile(
                                title: Text(allergenName),
                                trailing: IconButton(
...
                      stream: _fireStoreService.getUserDocSnapshot(),
                      builder: (context, snapshot) {
                        if (snapshot.hasData) {
                          final userDoc = snapshot.data!;
                          final allergenicFoodsList = userDoc.data()?['allergenicfoods'] as List<dynamic>;
                          return ListView.builder(
                            key: const Key('allergenicFoodsListView'),
                            itemCount: allergenicFoodsList.length,
                            itemBuilder: (context, index) {
                              final foodName = allergenicFoodsList[index].toString();
                              return ListTile(
                                title: Text(foodName),
                                trailing: IconButton(
...
                      stream: _fireStoreService.getUserDocSnapshot(),
                      builder: (context, snapshot) {
                        if (snapshot.hasData) {
                          final userDoc = snapshot.data!;
                          final symptomsList = userDoc.data()?['symptoms'] as List<dynamic>;
                          return ListView.builder(
                            key: const Key('yourSymptomsListView'),
                            itemCount: symptomsList.length,
                            itemBuilder: (context, index) {
                              final log = symptomsList[index] as Map<String, dynamic>;
                              final logTitle = log['title'] as String;
                              final symptoms = log['mySymptoms'] as String;
                              final occurrenceDate = log['occurrenceDate'] as String;
...
